// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator test type of Indicator 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    className=
        ms-ProgressIndicator
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      className=
          ms-ProgressIndicator-itemName
          {
            color: #323130;
            line-height: 20px;
            overflow: hidden;
            padding-top: 4px;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      id="progress-indicator3-label"
    >
      Example Label
    </div>
    <div
      className=
          ms-ProgressIndicator-itemProgress
          {
            height: 2px;
            overflow: hidden;
            padding-bottom: 8px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 8px;
            position: relative;
          }
    >
      <div
        className=
            ms-ProgressIndicator-progressTrack
            {
              background-color: #edebe9;
              height: 2px;
              position: absolute;
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-bottom: 1px solid WindowText;
            }
      />
      <div
        aria-describedby="progress-indicator3-description"
        aria-labelledby="progress-indicator3-label"
        className=
            ms-ProgressIndicator-progressBar
            {
              animation: keyframes 0%{left:-30%;}100%{left:100%;} 3s infinite;
              background-color: #0078d4;
              background: linear-gradient(to right, #edebe9 0%, #0078d4 50%, #edebe9 100%);
              height: 2px;
              min-width: 33%;
              position: absolute;
              transition: width .3s ease;
              width: 0px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: highlight;
              background: highlight;
              forced-color-adjust: none;
            }
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className=
          ms-ProgressIndicator-itemDescription
          {
            color: #605e5c;
            font-size: 12px;
            line-height: 18px;
          }
      id="progress-indicator3-description"
    >
      Example Description
    </div>
  </div>
</div>
`;

exports[`ProgressIndicator theme 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
>
  <div
    className=
        ms-ProgressIndicator
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      className=
          ms-ProgressIndicator-itemName
          {
            color: #323130;
            line-height: 20px;
            overflow: hidden;
            padding-top: 4px;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      id="progress-indicator2-label"
    >
      Example Label
    </div>
    <div
      className=
          ms-ProgressIndicator-itemProgress
          {
            height: 2px;
            overflow: hidden;
            padding-bottom: 8px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 8px;
            position: relative;
          }
    >
      <div
        className=
            ms-ProgressIndicator-progressTrack
            {
              background-color: #edebe9;
              height: 2px;
              position: absolute;
              width: 100%;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-bottom: 1px solid WindowText;
            }
      />
      <div
        aria-describedby="progress-indicator2-description"
        aria-labelledby="progress-indicator2-label"
        className=
            ms-ProgressIndicator-progressBar
            {
              animation: keyframes 0%{left:-30%;}100%{left:100%;} 3s infinite;
              background-color: #test-primary;
              background: linear-gradient(to right, #edebe9 0%, #test-primary 50%, #edebe9 100%);
              height: 2px;
              min-width: 33%;
              position: absolute;
              transition: width .3s ease;
              width: 0px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              -ms-high-contrast-adjust: none;
              background-color: highlight;
              background: highlight;
              forced-color-adjust: none;
            }
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": undefined,
          }
        }
      />
    </div>
    <div
      className=
          ms-ProgressIndicator-itemDescription
          {
            color: #605e5c;
            font-size: 12px;
            line-height: 18px;
          }
      id="progress-indicator2-description"
    >
      Example Description
    </div>
  </div>
</div>
`;
